<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_content"
    android:orientation="vertical" >

    <include layout="@layout/common_view_top_bar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_divider"
        android:contentDescription="@string/img_desc"
        android:src="@color/common_divider" />

    <EditText
        android:id="@id/id_customer_trace"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/common_margin"
        android:background="@drawable/common_round_rect_bg"
        android:gravity="left|top"
        android:hint="@string/customer_add_record"
        android:padding="5dp"
        android:textColorHint="@color/common_hint_color"
        android:textSize="@dimen/common_item_text_size" />

    <Button
        android:id="@id/id_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:background="@drawable/common_green_btn_bg"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>