<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_dialog_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/common_dialog_bg"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin"
        android:paddingTop="@dimen/common_margin" >

        <RelativeLayout
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center_horizontal|bottom"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirty"
                android:textColor="@color/common_text_black_2"
                android:textSize="40sp" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_unit"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/min"
                android:textColor="@color/common_text_black_2"
                android:textSize="@dimen/common_text_size_3" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_dialog_title"
            android:layout_marginTop="@dimen/common_margin"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/common_text_black_3"
            android:textSize="@dimen/common_text_size_4" />

        <ImageView
            android:id="@id/id_divider_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider"
            android:layout_below="@+id/tv_dialog_content"
            android:layout_marginTop="@dimen/common_margin"
            android:contentDescription="@string/img_desc"
            android:src="@color/common_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/id_divider_1"
            android:orientation="horizontal" >

            <Button
                android:id="@id/id_confirm"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/common_text_green"
                android:textSize="@dimen/common_text_size_2" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>