<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/common_margin"
    android:paddingRight="@dimen/common_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/tv_time_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cooperate_rule_time"
            android:textColor="@color/common_text_black_5"
            android:textSize="@dimen/common_text_size_5" />

        <TextView
            android:id="@id/id_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_toRightOf="@+id/tv_time_tag"
            android:text="@string/cooperate_rule_time_test"
            android:textColor="@color/common_text_black_5"
            android:textSize="@dimen/common_text_size_5" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/img_desc"
            android:src="@drawable/ic_arrow_right" />
    </RelativeLayout>

</LinearLayout>