<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_content"
    android:orientation="vertical" >

    <include layout="@layout/common_view_top_bar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_divider"
        android:contentDescription="@string/img_desc"
        android:src="@color/common_divider" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_divider"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/img_desc"
        android:src="@color/common_divider" />

    <EditText
        android:id="@id/id_user_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_item_height"
        android:background="@color/white"
        android:hint="@string/project_add_hint"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin"
        android:textColor="@color/common_text_black_2"
        android:inputType="number"
        android:textColorHint="@color/common_hint_color" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_divider"
        android:contentDescription="@string/img_desc"
        android:src="@color/common_divider" />

    <Button
        android:id="@id/id_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_green_btn_bg"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>